@@ -2,6 +2,8 @@ AUX gphoto2-ixany.patch 533 RMD160 84c48af39a8e843765816060656132a4dd467b22 SHA1
 AUX libgphoto2-2.4.0-rpm.patch 452 RMD160 694c3f602a6b20fbcd135586d69551e335328f84 SHA1 ebbee5e9c4a6c1659e6fe7278733ce9b1702d430 SHA256 39501ccdfc6c780b3aa6a105584b32e9e4a6ad7195a14a341210be9f2e871149
 AUX libgphoto2-2.4.3-automagic.patch 2111 RMD160 6cf8795ebfde7f20815979fa0a37152966ba768b SHA1 24d0e1278640918dbc182df38b2955fe5fab370c SHA256 5e259e288924cb1183c7953367e6f8933f99f358e4d43a1967b3273769725a90
 DIST libgphoto2-2.4.4.tar.bz2 5252280 RMD160 bdb26313f1b5b2b425a7ed13bfe10a3f04488209 SHA1 a1d881e27231037bb860b952560cec36ce6a8988 SHA256 2582362ae318b62c31832edfcaf401397fcc98fd307347ee15babff94770784d
-EBUILD libgphoto2-2.4.4.ebuild 6316 RMD160 07b076170e5b80b35ef1d73ba9740e3f11a6fb70 SHA1 74fe3147393c0d501deaf3441429ef2d6e9a4f21 SHA256 5386e0afc974157732058d284b9a6081375845ad9e15177041baa8844956ef2d
-MISC ChangeLog 24187 RMD160 b6e62daae2adf15b45aa079a5d12baf418f9023b SHA1 6d070ab0e12717e6db383615cd2436e06cea589e SHA256 10ac1f6b84b2430c5a6cc5bd30d28a2c206b62e57b6fdc59efc13bbdcf96580c
+DIST libgphoto2-2.4.5.tar.bz2 5251180 RMD160 b5add1b9d13079578c113f45a11eafa8372c1c84 SHA1 b1f51f0587afbe454db411f9005bd6ce5138156b SHA256 d32df1ba44ade8aace11258c2e8d5a1ec7182fc5e6375a6cf2e7c9d5256f37de
+EBUILD libgphoto2-2.4.4.ebuild 6309 RMD160 e97f9bcadab00c599971cb2fc02b00c188ae5dc7 SHA1 ff3dbc98f5edb8c84a2d7434f9fd342cf5764676 SHA256 cb3ba4abd54bf5d1d344b12c2ba3191e9ec2f1527ea4d48cebc6f2514627ff7d
+EBUILD libgphoto2-2.4.5.ebuild 6115 RMD160 fc3fafecd5160c7b4b5b43cf84c805ebf2d1f8e6 SHA1 b2457d3b8f594aa51001265bbd5f3c2c9c450846 SHA256 9db12c031f56997b5a8f1d9bce62cb4e4b393a563c5a46c28eeecada89212956
+MISC ChangeLog 24554 RMD160 de980bba7d45d012e60a51b74bbf11025be1eb67 SHA1 dc0283a994ca874d0f9de5d4919eb81e9cdc14ac SHA256 5186d010311ea8d47a19af345e000830076f7f812f58b0a571cb8ee0c24947f6
 MISC metadata.xml 255 RMD160 182d44452574b19b29c12dc7e757a2a4aa9cbc20 SHA1 7e912f6a5b9a294509849512ba044bd88b59065f SHA256 d2cc84bd8e8d171980c022b0af42cf2f2d829e37c05183988a211fccafcf363b
